# NavalCivGame

./: .gitignore  README.md  main.py  pyproject.toml
battleboats/agents/: random_agent.py
battleboats/core/: actions.py  gameEngine.py  main.py  player.py  port.py  sighting.py
battleboats/core/config/: attackModifiers.csv  generate_map.py  mapConfig.yaml  mapConfigLarge.yaml  mapConfigMedium.yaml  mapConfigSmall.yaml  shipTypes.csv
battleboats/core/map/: Map.py
battleboats/core/shipyard/: ship.py  ship_data.py  ship_stats.py  ship_type.py
battleboats/core/utils/: plotMap.py
battleboats/envs/: __init__.py  battleboats_aec.py  observation.py
docs/: policy_architecture.md
tests/: test_build_port.py  test_clone.py  test_combat.py  test_economy.py  test_get_state.py  test_legal_actions.py  test_port_visibility.py  test_visibility.py
