[tool.poetry]
name = "battleboats"
version = "0.1.0"
description = "strategy game for ML experimentation"
authors = ["nick_russo22"]
readme = "README.md"
packages = [{ include = "battleboats" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
numpy = "^2.4.4"
gymnasium = "^1.2.3"
matplotlib = "^3.10.8"
torch = "^2.11.0"
pyyaml = "^6.0.3"
seaborn = "^0.13.2"
pytest = "^9.0.3"
pettingzoo = "^1.26.1"

[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
isort = "^8.0.1"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
ignore = ["E203", "E501", "W503"]
max-line-length = 127